src/index.css
* {
  box-sizing: border-box;
}

:root {
  --color-primary: #293264;
  --color-seconday: #f5f7fb;
  --btn-primary: #4d5b9e;
  --btn-seconday: #d6dbf5;
}

body {
  margin: 0;
  font-family: Inter, sans-serif;
}

main {
  background-color: var(--color-seconday);
  background-image: url(./assets/blob-light-blue.png),
    url(./assets/blob-light-yellow.png);
  background-repeat: no-repeat;
  background-position:
    bottom left,
    top right;
  background-size: 15%;
  display: flex;
  justify-content: center;
  align-items: center;
  width: 100vw;
  height: 100vh;
}

/* Start Menu */

.start-menu {
  text-align: center;
}

.start-menu-text,
.start-menu-title {
  color: var(--color-primary);
  text-align: center;
}

.start-menu-title {
  font-family: Karla, sans-serif;
  font-size: 1.953rem;
  margin: 0;
}

.start-menu-text {
  font-size: 1.2rem;
  margin-top: 10px;
}

.start-menu-btn {
  background-color: var(--btn-primary);
  border-radius: 15px;
  border: none;
  box-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.7);
  color: #f5f7fb;
  cursor: pointer;
  font-family: Inter;
  font-size: 1rem;
  font-weight: 500;
  width: 193px;
  height: 52px;
  margin-top: 10px;
}

.start-menu-btn:hover {
  filter: brightness(110%);
}

.start-menu-btn:active {
  transform: translateY(1px);
}

/* Quiz Questions */

.question {
  color: var(--color-primary);
  font-family: Karla, sans-serif;
  font-size: 1rem;
  margin-top: 14px;
}

.options-container {
  display: flex;
  gap: 13px;
  margin: 11px 0 14px;
}

.option input[type="radio"] {
  display: none;
}

.option label {
  color: var(--color-primary);
  border: 0.8px solid var(--btn-primary);
  border-radius: 9px;
  padding: 4px 16px;
  font-size: 0.64rem;
  font-weight: 500;
  cursor: pointer;
  transition:
    background-color 0.3s ease,
    color 0.3s ease;
}

.option label:hover {
  background-color: var(--btn-seconday);
}

.option input[type="radio"]:checked + label {
  background-color: var(--btn-seconday);
  border: none;
}

.divider {
  margin: 0;
  border: 0.79px solid #dbdef0;
  width: 800px;
}

